# sber-agents

./: README.md
02-llm-api/: report.md
02-llm-api/src/: bot.py
03-aidd/: Makefile  config.toml  pyproject.toml  report.md
03-aidd/.cursor/rules/: conventions.mdc  workflow.mdc
03-aidd/app/: config.py  llm_client.py  main.py
03-aidd/docs/: conventions.md  idea.md  tasklist.md  vision.md  workflow.md
04-multimodal/: .env.example  CHECKLIST.md  README.md  SHORT_REPORT.md  pyproject.toml  report.md
04-multimodal/.ssh/: immers-vm.pem
04-multimodal/docs/: add-ssh-key.md  deployment.md  idea.md  quick-start.md  server-management.md  ssh-existing-key.md  ssh-setup.md  tasklist.md  vision.md  voice-testing.md
04-multimodal/scripts/: deploy.sh
04-multimodal/src/: config.py  handlers.py  voice_service.py
05-rag-langchain/: Makefile  env.example  pyproject.toml  report.md
05-rag-langchain/docs/: ollama-setup.md
05-rag-langchain/prompts/: conversation_system.txt  query_transform.txt
05-rag-langchain/src/: bot.py  config.py  handlers.py  indexer.py  indexer_with_json.py  rag.py
06-monitoring-qa/: README-DATASET.md  env.example  pyproject.toml  report.md
06-monitoring-qa/docs/: manual-dataset-creation.md
06-monitoring-qa/src/: bot.py  config.py  evaluation.py  handlers.py  indexer.py
07-advanced-rag/: Makefile  env.example  pyproject.toml  report.md
08-agents-langgraph/: env.example  pyproject.toml  report.md
09-mcp/: env.example  pyproject.toml  report.md
10-guard/: README.md  env.example  pyproject.toml  report.md
docs/: idea.md
(+16 files in other folders)
